--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "antd": "^6.2.3",
     "framer-motion": "^12.34.0",
     "next": "16.1.6",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^8.0.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
